--- a/index.html
+++ b/index.html
@@ -27,5 +27,33 @@
         </div>
       </div>
     </header>
+
+    <div class="middle">
+
+      <div class="middle-first">
+        <div class="your_day">
+        <h3>YOUR DAY <br> AT THE GALLERY</h3>
+        <p>Wander through our distinct collections and find new insights about our artists. Dive into the details of their creative process.</p>
+        </div>
+        <div>
+          <img class="first-img" src="./assets/mobile/image-grid-1.jpg" alt="photo">
+        </div>
+      </div>
+
+      <div class="middle-second">
+          <img class="second-img" src="./assets/mobile/image-grid-2.jpg" alt="photo">
+          
+      <div class="middle-black">
+               <img class="third-img" src="./assets/mobile/image-grid-3.jpg"> 
+
+              <box class="middle-second-left">
+                <h3 class="black-h3">COME & BE INSPIRED</h3>
+                <p class="black-p">We’re excited to welcome you to our gallery and see how our collections influence you.</p>
+              </box>
+      </div>
+        </div>
+      </div>
+</main>
+
   </body>
 </html>
