--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="img-wrapper"></div>
       <div class="header-content-wrapper">
           <h1>MODERN ART GALLERY</h1>
-            <p>
+            <p class="header-p">
             The arts in the collection of the Modern Art Gallery all started
             from a spark of inspiration. Will these pieces inspire you? Visit us
             and find out.
@@ -33,18 +33,23 @@
       <div class="middle-first">
         <div class="your_day">
         <h3>YOUR DAY <br> AT THE GALLERY</h3>
-        <p>Wander through our distinct collections and find new insights about our artists. Dive into the details of their creative process.</p>
+        <p class="middle-p">Wander through our distinct collections and find new insights about our artists. Dive into the details of their creative process.</p>
         </div>
         <div>
           <img class="first-img" src="./assets/mobile/image-grid-1.jpg" alt="photo">
+          <img class = "first-img-tablet" src="./assets/tablet/image-grid-1.jpg" alt="photo">
         </div>
       </div>
 
       <div class="middle-second">
+        <div>
           <img class="second-img" src="./assets/mobile/image-grid-2.jpg" alt="photo">
-          
+          <img class="second-img-tablet" src="./assets/tablet/image-grid-2.jpg" alt="photo">
+        </div>
+                 
       <div class="middle-black">
                <img class="third-img" src="./assets/mobile/image-grid-3.jpg"> 
+               <img class="third-img-tablet" src="./assets/tablet/image-grid-3.jpg" alt="photo">
 
               <box class="middle-second-left">
                 <h3 class="black-h3">COME & BE INSPIRED</h3>
