added middle part of desktop version

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <div>
           <img class="first-img" src="./assets/mobile/image-grid-1.jpg" alt="photo">
           <img class = "first-img-tablet" src="./assets/tablet/image-grid-1.jpg" alt="photo">
+          <img class="first-img-desktop" src="./assets/desktop/image-grid-1.jpg" alt="">
         </div>
       </div>
 
@@ -45,11 +46,13 @@
         <div>
           <img class="second-img" src="./assets/mobile/image-grid-2.jpg" alt="photo">
           <img class="second-img-tablet" src="./assets/tablet/image-grid-2.jpg" alt="photo">
+          <img class="second-img-desktop" src="./assets/desktop/image-grid-2.jpg" alt="">
         </div>
                  
       <div class="middle-black">
                <img class="third-img" src="./assets/mobile/image-grid-3.jpg"> 
                <img class="third-img-tablet" src="./assets/tablet/image-grid-3.jpg" alt="photo">
+               <img class="third-img-desktop" src="./assets/desktop/image-grid-3.jpg" alt="">
 
               <box class="middle-second-left">
                 <h3 class="black-h3">COME & BE INSPIRED</h3>
